--- a/src/styles/Calculator.css
+++ b/src/styles/Calculator.css
@@ -3,7 +3,8 @@ form {
     padding: 1rem;
     border: 1px solid white;
     border-radius: 10px;
-    width: 500px;
+    width: 30%;
+    min-width: 500px;
     margin: 0 auto;
 }
 
